syntax = "proto3";

package medal6_service;

service MedalService {
    rpc AddMedal(Medal) returns (Medal);
    rpc EditMedal(Medal) returns (Medal);
    rpc DeleteMedal(GetSingleRequest) returns (Message);
    rpc ListMedals(ListRequest) returns (ListResponse);
    rpc GetMedal(GetSingleRequest) returns (Medal);
}

message Medal {
    int64 id = 1;
    int64 country_id = 2;
    string type = 3;
    int64  event_id = 4;
    string athlete_id = 5;
    string created_at = 6;
    string updated_at = 7;
}

message GetSingleRequest {
    int64 id = 1;
}

message ListRequest {
    int32 page = 1;
    int32 limit = 2;
    int64 country = 3;
    int64 event_id = 4;
    string athlete_id = 5;
}

message ListResponse {
    int64 count = 1;   
    repeated Medal medals = 2;
}

message Message {
    string message = 1;
}